[tool.poetry]
name = "climy"
version = "0.0.1"
description = "CLI Made Easy"
authors = ["Ritesh Kadmawala <ritesh@vertexcover.io>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
