[tool.poetry]
name = "climy"
version = "0.0.1"
description = "CLI Made Easy"
authors = ["Ritesh Kadmawala <ritesh@vertexcover.io>"]

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.poetry.dependencies]
python = "^3.9"
Jinja2 = "^3.1.1"
sarge = "^0.1.7"
starlette = "^0.19.1"
click = "^8.1.3"
dataclasses-json = "^0.5.7"
uvicorn = {extras = ["standard"], version = "^0.17.6"}

[tool.poetry.dev-dependencies]
ipython = "^8.2.0"
mypy = "^0.942"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
